2012-06-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* AIPlayer.cs:
	  Fixed condition to use ability of Bill Noface.

2012-06-17  WOnder93  <omosnacek@gmail.com>

	* MyClass.cs:
	  Deleted forgotten unused file.

2012-06-15  WOnder93  <omosnacek@gmail.com>

	* AIPlayer.cs:
	  Take cards, not just card types, as parameters in
	  CardHelper's methods.
	Improved weapon handling.

	* CardHelper.cs:
	  Take cards, not just card types, as parameters in
	  CardHelper's methods.
	Improved evaluation of Volcanic.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-06-14  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* AIPlayer.cs:
	  Renamed the OnPlayerPassed session event to
	  OnPlayerEndedTurn.

2012-06-11  WOnder93  <omosnacek@gmail.com>

	* Bang# AI.csproj:
	  An automatic project file fix.

2012-04-06  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* StandardPlayerHelper.cs:
	  Shuffle the allies and enemies collections before returning.
	Do not wrap allies and enemies collections into
	  ReadOnlyCollection<T> as it useless.

2012-03-18  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Adapted to the new iterface.

2012-03-07  WOnder93  <omosnacek@gmail.com>

	* CardHelper.cs:
	* Bang# AI.csproj:
	* AssemblyInfo.cs:
	* PlayerHelper.cs:
	* StandardPlayerHelper.cs:
	* TwoPlayersPlayerHelper.cs:
	* ThreePlayersPlayerHelper.cs:
	  Changed the root namespace to BangSharp.
	Improved password hashing.
	Improved the draw system.
	Renamed CardResultHandler to CardResultCallback.
	IResultHandler replaced by the ResultCallback delegate.
	Fixed printing IsAlive instead of Role in Console Utils.
	Fixed AI role estimation.
	Fixed remoting channels management.
	Fixed revealing role publicly after the game has ended.
	Fixed useless server state saving when resetting sessions.
	Fixed discarding cards after death.